<resources>
    <string name="app_name">HFUwerdMobil!</string>
    <string name="authentification">HFUwerdMobil!</string>
    <string name="choose_route">Route wählen</string>
    <string name="record_route">Route wird aufgezeichnet..</string>
    <string name="route_details">Routendetails</string>
    <string name="about">Über</string>
    <string name="driven_routes">gefahrene Routen</string>
    <string name="help">Hilfe</string>
    <string name="imprint">Impressum</string>
    <string name="settings">Einstellungen</string>
    <string name="user_verify">Verifizierung</string>
    <string name="menu_home">Route wählen</string>
    <string name="menu_driven_routes">Routendetails</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_about">Über</string>
    <string name="menu_imprint">Impressum</string>
    <string name="menu_help">Hilfe</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="hometown">PLZ</string>
    <string name="phone">Telefon</string>
    <string name="obd">OBD</string>
    <string name="save">Speichern</string>
    <string name="savedSettings">Einstellungen gespeichert</string>
    <string name="contentDesc_user_picture">Benutzerbild</string>
    <string name="route_start">Startort</string>
    <string name="route_seperator">---</string>
    <string name="route_end">Zielort String</string>
    <string name="route_date">Datum</string>
    <string name="routen_infos"><b>Routen-Infos</b></string>
    <string name="start_and_destination">Startort - Zielort</string>
    <string name="no_date">Kein Datum vorhanden</string>
    <string name="no_detail"> k.A.</string>
    <string name="travel_time">Fahrzeit:</string>
    <string name="route_length">Fahrstrecke:</string>
    <string name="average_speed">Durchschnittsgeschwindigkeit:</string>
    <string name="wastage">Verbrauch:</string>
    <string name="dialog_fatalError_title">Kritischer Fehler</string>
    <string name="dialog_fatalError_message">Es ist ein schwerwiegender Fehler aufgetreten. Die App muss beendet werden.</string>
    <string name="dialog_fatalError_terminate">Okay.</string>
    <string name="dialog_primaryMailChanged_title">E-Mail ändern</string>
    <string name="dialog_primaryMailChanged_message">Die E-Mail Andresse Ihres Android Gerätes hat sich verändert. Soll die neue E-Mail Adresse auch als neue App-E-Mail-Adresse verwendet werden?</string>
    <string name="dialog_primaryMailChanged_yes">Ja</string>
    <string name="dialog_primaryMailChanged_no">Nein danke</string>
    <string name="dialog_primaryMailChangedSuccessfully_title">E-Mail geändert</string>
    <string name="dialog_primaryMailChangedSuccessfully_message">Die App-E-Mail Adresse wurde durch die neue E-Mail Adresse Ihres Android Gerätes ersetzt.</string>
    <string name="dialog_primaryMailChangedSuccessfully_okay">Okay</string>
    <string name="dialog_locationProviderNotAvailable_title">Standorterfassung fehlgeschlagen</string>
    <string name="dialog_locationProviderNotAvailable_message">Wir können deinen aktuellen Standort weiterhin nicht mehr erfassen. Bitte sorge dafür, dass Du GPS während der Routen Aufzeichnung nicht deaktivierst. Wir beenden nun die aktuelle Routen Aufzeichnung.</string>
    <string name="dialog_locationProviderNotAvailable_okay">Okay</string>
    <string name="dialog_inputManuallyMail_title">Deine E-Mail Adresse</string>
    <string name="dialog_inputManuallyMail_message">Wir konnten die E-Mail Adresse deines Google Accounts auf dem Android Gerät nicht auslesen. Bitte gib deine E-Mail Adresse ein:</string>
    <string name="dialog_inputManuallyMail_okay">Okay</string>
    <string name="dialog_verifycodeInputFailed_title">Verifizierung fehlerhaft</string>
    <string name="dialog_verifycodeInputFailed_message">Der eingegebene Verifizierungscode stimmt leider nicht mit dem Code überein, den wir dir per E-Mail geschickt haben.</string>
    <string name="dialog_verifycodeInputFailed_okay">Erneut versuchen</string>
    <string name="dialog_networkFailed_title">Fehlerhafter Vorgang</string>
    <string name="dialog_networkFailed_message">Keine Verbindung mit dem Netzwerk möglich. Bitte prüfe deine Internetverbindung. (developer note: no internet connectior or no connection to server available)</string>
    <string name="dialog_networkFailed_okay">Okay</string>
    <string name="dialog_emailNotValid_title">E-Mail nicht korrekt</string>
    <string name="dialog_emailNotValid_message">Die eingegebene E-Mail ist nicht korrekt. Bitte überprüfe deine Eingabe.</string>
    <string name="dialog_emailNotValid_okay">Weiter</string>
    <string name="dialog_deviceNumberNotValid_title">Handynummer nicht korrekt</string>
    <string name="dialog_deviceNumberNotValid_message">Bitte eine korrekte Handynummer (mit mindestens 6 Zahlen) eingeben.</string>
    <string name="dialog_deviceNumberNotValid_okay">Are you serious?</string>
    <string name="activate_gps">Bitte GPS aktivieren</string>
    <string name="aktueller_standort">aktueller Standort</string>
    <string name="start_route">Route starten</string>
    <string name="destination_chosen">Startpunkt ausgewählt</string>
    <string name="background1">Hintergrund1</string>
 	<string name="hfu_student">Mit HFU Mailkonto anmelden</string>
  	<string name="no_hfu_student">Mit externem Mailkonto anmelden</string>
  	<string name="logo">HFUWerdmobil!</string>
  	<string name="app_name1">HFU</string>
  	<string name="app_name2">werdMobil!</string>
  	<string name="furtwangen">HFU Furtwangen</string>
  	<string name="schwenningen">HFU Schwenningen</string>
  	<string name="tuttlingen">HFU Tuttlingen</string>
  	<string name="home">nach Hause</string>
  	<string-array name="selectable_locations">
        <item>@string/furtwangen</item>
        <item>@string/schwenningen</item>
        <item>@string/tuttlingen</item>
        <item>@string/home</item>
    </string-array>
  	<string name="refresh">Refresh</string>
  	<string name="bluetooth">Bluetooth</string>
  	<string name="recent_routes">Zuletzt gefahrene Routen</string>
  	<string name="record_route_info">Deine Fahrt wird nun aufgezeichnet und in Echtzeit an unsere Server übertragen. Solange Du die Übertragung nicht beendest, können Dich potenzielle Mitfahrer anrufen.</string>
    <string name="endRouteDestination">Ich habe mein Ziel erreicht!</string>
    <string name="maxmustermann">max.mustermann</string>
    <string name="your_email_address">Deine E-Mail Adresse:</string>
    <string name="hsfurtwangende">\@hs-furtwangen.de</string>
    <string name="welcome_back">Willkommen zurück, </string>
    <string name="send">Absenden</string>
    <string name="email">E-Mail</string>
    <string name="input_your_device_number">Bitte Handynummer angeben</string>
  	<string name="your_device_number">Deine Handynummer:</string>
  	<string name="example_number">01673235287</string>
  	<string name="note_verify_code">Wir haben dir soeben einen Verifizierungscode an deine E-Mail geschickt. Bitte gib diesen Code hier ein, damit wir Dir deine E-Mail Adresse zuordnen können.</string>
  	<string name="check_code">Verifizierung abschließen</string>
  	<string name="hfu">HFU</string>
  	<string name="tobiasstraub">Tobias Straub</string>
  	<string name="susanneroos">Susanne Roos</string>
  	<string name="matthiasfeichtmeier">Matthias Feichtmeier</string>
  	<string name="thomaslesinski">Thomas Lesinski</string>
  	<string name="veronikakinzel">Veronika Kinzel</string>
  	<string name="hfuwerdmobillogo">HFUwerdmobil!</string>
  	<string name="no_routes_to_show">bisher keine Route</string>
  	<string name="is_destination_yet">Sie sind bereits am Ziel</string>
  	<string name="is_destination">Sie haben das Ziel erreicht</string>
  	<string name="no_data_available">Keine Routendaten aufgezeichnet</string>
</resources>