<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingLeft="5sp"
    android:paddingTop="10sp"
    android:rowCount="5" >

    <ImageView
        android:id="@+id/lm1"
        android:src="@drawable/location_marker" />

   <TextView
        android:id="@+id/current_location"
        android:text="@string/aktueller_standort"
        android:textSize="25sp"
        android:layout_marginTop="5dp" />
    
    <ImageView
        android:id="@+id/lm2"
        android:src="@drawable/location_marker" />
    
    <Spinner
        android:id="@+id/locations"
        android:layout_width="248dp"
        android:entries="@array/selectable_locations"
        android:spinnerMode="dropdown" />
    
    <Space
	    android:layout_column="0"
	    android:layout_width="50dp"
	    android:layout_height="10dp" />
    
    <Button
     android:id="@+id/start_route"
     android:layout_gravity="left|top"
     android:text="@string/start_route" />
    
    <Space
	    android:layout_column="0"
	    android:layout_width="50dp"
	    android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/recent_routes"
        android:text="@string/recent_routes"
        android:textSize="15sp"
        android:layout_marginTop="25dp" />
    
    <Space
	    android:layout_column="0"
	    android:layout_width="50dp"
	    android:layout_height="10dp" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="248dp"
        android:layout_height="230dp" />

</GridLayout>